# Django-3-Boilerplate

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: manage.py
src/default_app/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: admin.py  forms.py  managers.py  models.py  tests.py
src/users/migrations/: 0001_initial.py  0002_alter_customuser_date_joined.py
