[tool.poetry]
name = "djang-3.2-starter-kit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "3.2"
pycodestyle = "^2.7.0"
mypy = "^0.902"
autopep8 = "^1.5.7"
pylint = "^2.8.3"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.autopep8]
max_line_length = 100
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggresive = 3
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

